welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:18: error: not found: value estSurMur
 while(estSurBiscuit==false && estSurMur==true){
                               ^