welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();

while(estFaceMur==false){
while(estFaceMur==false){
	droite();droite();
	prendBiscuit();
	avance();avance();avance();avance();avance();
	droite();droite();
	avance();
}

while(estSurBiscuit==false ){
	avance();
}
}
 while(estSurBiscuit==false && estSurMur==true){
 	droite();
 	avance();
 	gauche();
 	avance();
 }
